# zep-lang

./: .clang-tidy  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  TODO.md  a.rs
checker/: CMakeLists.txt
checker/src/: call_resolver.cppm  checker.cppm  context.cppm  diagnostic.cppm  generic_resolver.cppm  struct_resolver.cppm  type_builder.cppm  type_checker.cppm  type_context.cppm
cli/: CMakeLists.txt
cli/src/: main.cpp
cli/src/commands/: compile.cppm  compile_command.cppm
cmake/: CompilerWarnings.cmake  Flags.cmake  Modules.cmake  Sanitizers.cmake  Standards.cmake
codegen/: CMakeLists.txt
codegen/common/: CMakeLists.txt
codegen/common/src/: driver.cppm
codegen/llvm/: CMakeLists.txt
codegen/llvm/src/: codegen.cppm  context.cppm  helper.cppm  scope.cppm
codegen/src/: codegen.cppm  context.cppm  helper.cppm  scope.cppm
common/: CMakeLists.txt
common/src/: arena.cppm  context.cppm  position.cppm  source.cppm  span.cppm
common/src/arena/: arena.cppm
common/src/logger/: colors.cppm  diagnostic.cppm  logger.cppm
compiler/: CMakeLists.txt
compiler/src/: compiler.cppm
design/: main.zep
driver/: CMakeLists.txt
driver/src/: driver.cppm
examples/: params.zep  simple_add.zep  structs.zep  test.zep  test_multi.zep  top_level.zep
frontend/: CMakeLists.txt
frontend/src/: arena.cppm
frontend/src/arena/: arena.cppm  node.cppm  scope.cppm  symbol.cppm  type.cppm
frontend/src/ast/: ast.cppm  ast_dumper.cppm  node.cppm  program.cppm
frontend/src/debug/: ast_dumper.cppm  sema_dumper.cppm
frontend/src/lexer/: lexer.cppm
frontend/src/parser/: parser.cppm  precedence.cppm
frontend/src/sema/: builtins.cppm  context.cppm  env.cppm  kind.cppm  mangler.cppm
frontend/src/sema/builder/: type_builder.cppm
frontend/src/sema/checker/: call_resolver.cppm  generic_resolver.cppm  struct_resolver.cppm  type_builder.cppm  type_checker.cppm
frontend/src/sema/resolver/: call.cppm  generic.cppm  structure.cppm
frontend/src/sema/scope/: scope.cppm  symbol.cppm
frontend/src/sema/type/: builder.cppm  checker.cppm  helper.cppm  resolver.cppm  type.cppm  type_context.cppm  type_helper.cppm  type_id.cppm
frontend/src/token/: keywords.cppm  token.cppm  type.cppm
hir/: CMakeLists.txt
hir/src/: builder.cppm  context.cppm  lowerer.cppm  mangler.cppm  monomorphizer.cppm
hir/src/ast/: ir.cppm
hir/src/debug/: hir_dumper.cppm
hir/src/hir/: node.cppm  program.cppm
hir/src/ir/: hir.cppm  program.cppm
hir/src/sema/: env.cppm  type.cppm
hir/src/sema/scope/: scope.cppm  symbol.cppm
lowerer/: CMakeLists.txt
lowerer/src/: env.cppm  lowerer.cppm  mangler.cppm  monomorphizer.cppm  name_mangler.cppm  nodes.cppm  scope.cppm  symbols.cppm  types.cppm
lowerer/src/ir/: ir.cppm
lowerer/src/sema/: env.cppm  types.cppm
lowerer/src/sema/scope/: scope.cppm  symbol.cppm
sema/: CMakeLists.txt
sema/src/: builtins.cppm  context.cppm  env.cppm  kind.cppm  kinds.cppm  symbol.cppm
sema/src/scope/: scope.cppm  symbol.cppm
sema/src/type/: type.cppm  type_context.cppm
